// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HTTPError should create a new instance 1`] = `
{
  "message": "Internal Server Error",
  "name": "HTTP 500",
  "stack": {
    "ok": false,
    "response": {
      "ok": false,
      "status": 500,
      "statusText": "Internal Server Error",
    },
    "status": 500,
    "statusText": "Internal Server Error",
  },
}
`;

exports[`json function should reject if no json function on response 1`] = `
{
  "name": "HTTP 502",
  "stack": {
    "response": {
      "status": 502,
    },
    "status": 502,
  },
}
`;

exports[`json function should resolve if attr json is on response 1`] = `
{
  "data": {
    "foo": "bar",
  },
  "headers": {
    "content-type": "application/json",
  },
}
`;

exports[`json function should resolve status HTTP_STATUS.NO_CONTENT but without json function 1`] = `{}`;

exports[`status function should reject if status >= 300 1`] = `
{
  "name": "HTTP 500",
  "stack": {
    "response": {
      "status": 500,
    },
    "status": 500,
  },
}
`;
